# amplifier-module-tool-veo

./: .gitignore  README.md  bundle.md  pyproject.toml
.amplifier/: bundle.md  settings.yaml
.github/workflows/: ci.yml
agents/: veo-expert.md
amplifier_module_tool_veo/: __init__.py  tool.py
behaviors/: veo.yaml
context/: instructions.md  veo-awareness.md
tests/: conftest.py  test_model_routing.py  test_tool.py
